--- a/index.html
+++ b/index.html
@@ -7,51 +7,67 @@
     <title>Document</title>
     <style>
         body{
+            background:url('/p1.jpg');
+            background-size: cover;
             background-color: black;
             text-align: center;
-            color: aliceblue;
+            color: rgb(7, 7, 7);
             font-size: 16px;
         }
         h1{
-            color: aliceblue;
-            text-shadow: 0 0 20px blue,0 0 20px blue,0 0 20px white;
-
+            color: rgb(246, 243, 243);
+            text-shadow: 0 0 20px brown,0 0 20px brown,0 0 20px black,0 0 20px black;
+            font-size: 4rem;
         }
         .rid{
-            margin-top: 20rem;
+            margin-top: 15rem;
+            font-size: 2rem;
+            color: black;
         }
         .flt{
-            background-color: rgb(240, 248, 255,0.9);
+            background-color: rgba(22, 23, 23, 1);
             padding: 10rem;
             margin: 0 4rem;
-            color: black;
+            color: white;
             border-radius: 2rem;
             position: relative;
             top: -9rem;
         }
         input{
-            color: black;
+            color: wheat;
             font-size: 2rem;
             text-align: center;
             font-family: 'Times New Roman', Times, serif;
             border: none;
             background: transparent;
-            border-bottom: 3px solid black;
+            border-bottom: 3px solid wheat;
+        }
+        button{
+            font-size: 1.7rem;
+            padding: 0.2rem 2rem;
+            margin: 1rem;
+            background: transparent;
+            border-radius: 1rem;
+            color: white;
+            font-family: 'Times New Roman', Times, serif;
         }
         .cls{
             display: none;
         }
+        img{
+            width: 100vw;
+        }
     </style>
 </head>
 <body>
-    <h1>Treasure HunT</h1>
+    <h1>Treasure Hunt</h1>
     <div class="rid">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. A, repellendus.
     </div>
     <div class="flt" id="flt">
         <input type="text" id="code" placeholder="Enter your Code...">
             <br> <br>
-            <button onclick="myFunction()">Try it</button>
+            <button onclick="myFunction()">Enter</button>
             <div id="msg"></div>
     </div>
     <div class="ss">
@@ -70,7 +86,6 @@
                 ms.innerHTML="WRONG CODEE";
             }
         }
-
     </script>
 </body>
 </html>
