--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
         .rid{
             margin-top: 4rem;
             font-size: 2rem;
-            color: rgb(10, 10, 10);
+            color: rgb(255, 255, 255);
             font-weight: bold;
             text-shadow: 0 0 20px brown,0 0 20px brown,0 0 20px black,0 0 20px black;
-            padding: 0 0.5rem;
+            padding: 1rem 0.5rem;
+            background-color: rgb(0, 0, 0,0.8);
         }
         .flt{
             background-color: black;
             position: relative;
-            top: -9rem;
+            top: -8rem;
+            margin: 0 1rem;
             border-radius: 2rem;
             padding: 2rem;
         }
@@ -67,6 +69,9 @@
             }
             .flt{
                 padding: 5rem;
+            }
+            .in{
+                font-size: 1.2rem;
             }
         }
     </style>
