--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         body{
-            background:url('/p1.jpg');
+            background:url(p1.jpg);
             background-size: cover;
             background-color: black;
             text-align: center;
