--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                 font-size: 1rem;
             }
             .flt{
-                padding: 5rem;
+                padding: 3rem;
+                top: -11rem;
             }
             .in{
                 font-size: 1.2rem;
